<resources>
	<string name="setup_title">Welcome to Briar</string>
	<string name="setup_name_explanation">Your nickname will be shown next to any content you post. You can\'t change it after creating your account.</string>
	<string name="setup_next">Sign-Up</string>
	<string name="setup_password_intro">Choose a Password</string>
	<string name="setup_password_explanation">Your Briar account is stored encrypted on your device, not in the cloud. If you forget your password or uninstall Briar, there\'s no way to recover your account.\n\nChoose a long password that\'s hard to guess, such as four random words, or ten random letters, numbers and symbols.</string>
	<string name="setup_doze_title">Background Connections</string>
	<string name="setup_doze_intro">To receive messages, Briar needs to stay connected in the background.</string>
	<string name="setup_doze_explanation">To receive messages, Briar needs to stay connected in the background. Please disable battery optimizations so Briar can stay connected.</string>
	<string name="setup_doze_button">Allow Connections</string>
	<string name="not_valid_email">Not a valid email</string>
	<string name="enter_email">Enter your email address</string>
	<string name="choose_nickname">Choose your nickname</string>
	<string name="choose_password">Choose your password</string>
	<string name="confirm_password">Confirm your password</string>
	<string name="name_too_long">Name is too long</string>
	<string name="password_too_weak">Password is too weak</string>
	<string name="passwords_do_not_match">Passwords do not match</string>
	<string name="create_account_button">Create Account</string>
	<string name="more_info">More Information</string>
	<string name="don_t_ask_again">Don\'t ask again</string>
	<string name="setup_huawei_text">Please tap the button below and make sure Briar is protected in the \"Protected Apps\" screen.</string>
	<string name="setup_huawei_button">Protect Briar</string>
	<string name="setup_huawei_help">If Briar is not added to the protected apps list, it will be unable to run in the background.</string>
	<string name="warning_dozed">%s was unable to run in the background</string>
	<string name="enter_password">Enter your password:</string>
	<string name="try_again">Wrong username or password, try again</string>
	<string name="sign_in_button">Sign In</string>
	<string name="forgotten_password">I have forgotten my password</string>
	<string name="dialog_title_lost_password">Lost Password</string>
	<string name="dialog_message_lost_password">Your Briar account is stored encrypted on your device, not in the cloud, so we can\'t reset your password. Would you like to delete your account and start again?\n\nCaution: Your identities, contacts and messages will be permanently lost.</string>
	<string name="startup_failed_notification_title">Briar could not start</string>
	<string name="startup_failed_notification_text">You may need to reinstall Briar.</string>
	<string name="startup_failed_activity_title">Briar Startup Failure</string>
	<string name="startup_failed_db_error">For some reason, your Briar database is corrupted beyond repair. Your account, your data and all your contacts are lost. Unfortunately, you need to reinstall Briar and set up a new account.</string>
	<string name="startup_failed_service_error">Briar was unable to start a required plugin. Reinstalling Briar usually solves this problem. However, please note that you will then lose your account and all data associated with it since Briar is not using central servers to store your data on.</string>
	<plurals name="expiry_warning">
		<item quantity="one">This is a test version of Briar. Your account will expire in %d day and cannot be renewed.</item>
		<item quantity="other">This is a test version of Briar. Your account will expire in %d days and cannot be renewed.</item>
	</plurals>
	<string name="expiry_update">The testing expiry date has been extended. Your account will now expire in %d days.</string>
	<string name="expiry_date_reached">This software has expired.\nThank you for testing!</string>
	<string name="nav_drawer_open_description">Open the navigation drawer</string>
	<string name="nav_drawer_close_description">Close the navigation drawer</string>
	<string name="contact_list_button">Contacts</string>
	<string name="groups_button">Private Groups</string>
	<string name="forums_button">Forums</string>
	<string name="blogs_button">Blogs</string>
	<string name="profile_button">Profile</string>
	<string name="settings_button">Settings</string>
	<string name="sign_out_button">Sign Out</string>
	<string name="transport_tor">Internet</string>
	<string name="transport_bt">Bluetooth</string>
	<string name="transport_lan">Wi-Fi</string>
	<string name="ongoing_notification_title">Signed into Briar</string>
	<string name="ongoing_notification_text">Touch to open Briar.</string>
	<plurals name="private_message_notification_text">
		<item quantity="one">New private message.</item>
		<item quantity="other">%d new private messages.</item>
	</plurals>
	<plurals name="group_message_notification_text">
		<item quantity="one">New group message.</item>
		<item quantity="other">%d new group messages.</item>
	</plurals>
	<plurals name="forum_post_notification_text">
		<item quantity="one">New forum post.</item>
		<item quantity="other">%d new forum posts.</item>
	</plurals>
	<plurals name="blog_post_notification_text">
		<item quantity="one">New blog post.</item>
		<item quantity="other">%d new blog posts.</item>
	</plurals>
	<string name="now">now</string>
	<string name="show">Show</string>
	<string name="hide">Hide</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="got_it">Got it</string>
	<string name="delete">Delete</string>
	<string name="accept">Accept</string>
	<string name="decline">Decline</string>
	<string name="options">Options</string>
	<string name="online">Online</string>
	<string name="offline">Offline</string>
	<string name="send">Send</string>
	<string name="allow">Allow</string>
	<string name="open">Open</string>
	<string name="no_data">No data</string>
	<string name="ellipsis">…</string>
	<string name="text_too_long">The entered text is too long</string>
	<string name="show_onboarding">Show Help Dialog</string>
	<string name="fix">Fix</string>
	<string name="help">Help</string>
	<string name="no_contacts">It seems that you are new here and have no contacts yet.\n\nTap the + icon at the top and follow the instructions to add some friends to your list.\n\nPlease remember: You can only add new contacts face-to-face to prevent anyone from impersonating you or reading your messages in the future.</string>
	<string name="date_no_private_messages">No messages.</string>
	<string name="no_private_messages">This is the conversation view.\n\nThere seems to be a lack of conversation.\n\nJust tap the input field at the bottom to start a conversation.</string>
	<string name="message_hint">Type message</string>
	<string name="delete_contact">Delete contact</string>
	<string name="dialog_title_delete_contact">Confirm Contact Deletion</string>
	<string name="dialog_message_delete_contact">Are you sure that you want to remove this contact and all messages exchanged with this contact?</string>
	<string name="contact_deleted_toast">Contact deleted</string>
	<string name="sort_contact_alphabetically">Sort Alphabetically</string>
	<string name="sort_contact_recent">Recent</string>
	<string name="add_contact_title">Add a Contact</string>
	<string name="face_to_face">You must meet up with the person you want to add as a contact.\n\nThis will prevent anyone from impersonating you or reading your messages in future.</string>
	<string name="continue_button">Continue</string>
	<string name="add_by_email_button">Add By Email</string>
	<string name="connection_failed">Connection failed</string>
	<string name="try_again_button">Try Again</string>
	<string name="waiting_for_contact_to_scan">Waiting for contact to scan and connect\u2026</string>
	<string name="exchanging_contact_details">Exchanging contact details\u2026</string>
	<string name="contact_added_toast">Contact added: %s</string>
	<string name="contact_already_exists">Contact %s already exists</string>
	<string name="contact_exchange_failed">Contact exchange failed</string>
	<string name="qr_code_invalid">The QR code is invalid</string>
	<string name="camera_error">Camera error</string>
	<string name="connecting_to_device">Connecting to device\u2026</string>
	<string name="authenticating_with_device">Authenticating with device\u2026</string>
	<string name="connection_aborted_local">Connection aborted! This could mean that someone is trying to interfere with your connection</string>
	<string name="connection_aborted_remote">Connection aborted by your contact! This could mean that someone is trying to interfere with your connection</string>
	<string name="introduction_onboarding_title">Introduce your contacts</string>
	<string name="introduction_onboarding_text">You can introduce your contacts to each other, so they don\'t need to meet in person to connect on Briar.</string>
	<string name="introduction_activity_title">Select Contact</string>
	<string name="introduction_message_title">Introduce Contacts</string>
	<string name="introduction_message_hint">Add a message (optional)</string>
	<string name="introduction_button">Make Introduction</string>
	<string name="introduction_sent">Your introduction has been sent.</string>
	<string name="introduction_error">There was an error making the introduction.</string>
	<string name="introduction_response_error">Error when responding to introduction</string>
	<string name="introduction_request_sent">You have asked to introduce %1$s to %2$s.</string>
	<string name="introduction_request_received">%1$s has asked to introduce you to %2$s. Do you want to add %2$s to your contact list?</string>
	<string name="introduction_request_exists_received">%1$s has asked to introduce you to %2$s, but %2$s is already in your contact list. Since %1$s might not know that, you can still respond:</string>
	<string name="introduction_request_answered_received">%1$s has asked to introduce you to %2$s.</string>
	<string name="introduction_response_accepted_sent">You accepted the introduction to %1$s.</string>
	<string name="introduction_response_declined_sent">You declined the introduction to %1$s.</string>
	<string name="introduction_response_accepted_received">%1$s accepted the introduction to %2$s.</string>
	<string name="introduction_response_declined_received">%1$s declined the introduction to %2$s.</string>
	<string name="introduction_response_declined_received_by_introducee">%1$s says that %2$s declined the introduction.</string>
	<plurals name="introduction_notification_text">
		<item quantity="one">New contact added.</item>
		<item quantity="other">%d new contacts added.</item>
	</plurals>
	<string name="groups_list_empty">You are not participating in any groups.\n\nTap the + icon at the top to create a group yourself or ask your contacts to get invited into one of their groups.</string>
	<string name="groups_created_by">Created by %s</string>
	<plurals name="messages">
		<item quantity="one">%d message</item>
		<item quantity="other">%d messages</item>
	</plurals>
	<string name="groups_group_is_empty">This group is empty</string>
	<string name="groups_group_is_dissolved">This group has been dissolved</string>
	<string name="groups_remove">Remove</string>
	<string name="groups_create_group_title">Create Private Group</string>
	<string name="groups_create_group_button">Create Group</string>
	<string name="groups_create_group_invitation_button">Send Invitation</string>
	<string name="groups_create_group_hint">Choose a name for your private group</string>
	<string name="view_profile">View Profile</string>
	<string name="delete_message">Delete Message</string>
	<string name="search_contacts">Search Contacts</string>
</resources>