<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_add_contact"
		android:icon="@drawable/ic_add_white"
		android:title="@string/add_contact_title"
		app:showAsAction="ifRoom"/>

	<item
	android:id="@+id/action_sort_contact_alpha"
	android:title="@string/sort_contact_alphabetically"
	app:showAsAction="never"/>

	<item
		android:id="@+id/action_sort_contact_recent"
		android:title="@string/sort_contact_recent"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_search_contacts"
		android:title="@string/search_contacts"
		android:icon="@android:drawable/ic_menu_search"
		app:showAsAction="collapseActionView|ifRoom"
		app:actionViewClass="android.support.v7.widget.SearchView" />

</menu>