<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/action_introduction"
		android:icon="@drawable/introduction_white"
		android:title="@string/introduction_button"
		android:enabled="false"
		android:visible="false"
		app:showAsAction="never"/>

	<item
		android:id="@+id/action_social_remove_person"
		android:icon="@drawable/action_delete_white"
		android:title="@string/delete_contact"
		android:visible="false"
		app:showAsAction="never"/>

	<item
		android:id="@+id/action_view_profile"
		android:icon="@drawable/action_delete_white"
		android:title="@string/view_profile"
		app:showAsAction="never"/>

	<item
		android:id="@+id/action_delete_message"
		android:icon="@drawable/action_delete_black"
		android:title="@string/delete_message"
		android:visible="true"
		app:showAsAction="always"/>

</menu>