<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/margin_activity_vertical"
		android:paddingEnd="@dimen/margin_activity_horizontal"
		android:paddingLeft="@dimen/margin_activity_horizontal"
		android:paddingRight="@dimen/margin_activity_horizontal"
		android:paddingStart="@dimen/margin_activity_horizontal"
		android:paddingTop="@dimen/margin_activity_vertical">

		<android.support.design.widget.TextInputLayout
			android:id="@+id/email_entry_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_medium"
			app:errorEnabled="true"
			app:hintEnabled="false"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/email_entry"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/enter_email"
				android:imeOptions="actionNext"
				android:inputType="text|textCapWords"
				android:maxLines="1"/>

			<requestFocus/>
		</android.support.design.widget.TextInputLayout>

		<org.briarproject.briar.android.login.StrengthMeter
			android:id="@+id/strength_meter"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:visibility="invisible"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/email_entry_wrapper"
			tools:visibility="visible"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/password_entry_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="120dp"
			app:errorEnabled="true"
			app:hintEnabled="false"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/password_entry"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/choose_password"
				android:inputType="textPassword"
				android:maxLines="1"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/password_confirm_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="96dp"
			app:errorEnabled="true"
			app:hintEnabled="false"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/strength_meter">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/password_confirm"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/confirm_password"
				android:inputType="textPassword"
				android:maxLines="1"/>
		</android.support.design.widget.TextInputLayout>

		<Button
			android:id="@+id/next"
			style="@style/BriarButton.Default"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/password_confirm_wrapper"
			android:layout_marginTop="232dp"
			android:enabled="false"
			android:text="@string/setup_next"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/email_entry_wrapper"
			tools:enabled="true"/>

		<Button
			android:id="@+id/btn_log_in"
			style="@style/BriarButton.Default"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/next"
			android:text="Log In Instead"
			tools:layout_editor_absoluteX="34dp"
			tools:layout_editor_absoluteY="383dp"/>

	</android.support.constraint.ConstraintLayout>

</ScrollView>
