<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="@dimen/margin_activity_vertical"
		android:paddingEnd="@dimen/margin_activity_horizontal"
		android:paddingLeft="@dimen/margin_activity_horizontal"
		android:paddingRight="@dimen/margin_activity_horizontal"
		android:paddingStart="@dimen/margin_activity_horizontal"
		android:paddingTop="@dimen/margin_activity_vertical"
		android:layout_margin="12dp"
		android:padding="@dimen/margin_large"
		>

		<TextView
			android:id="@+id/title_signin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:padding="@dimen/margin_large"
			android:text="Sign In"
			android:textSize="@dimen/text_size_large"
			android:textColor="?attr/textTitleColor"/>

		<TextView
			android:id="@+id/title_email"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/title_signin"
			android:padding="@dimen/margin_large"
			android:text="@string/enter_email"
			android:textSize="?attr/textTitleSize"
			android:textColor="?attr/textTitleColor"/>

		<EditText
			android:id="@+id/edit_email"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/title_email"
			android:padding="@dimen/margin_large"
			android:ems="10"
			android:hint="@string/enter_email"
			android:inputType="textEmailAddress"/>
		<TextView
			android:id="@+id/title_password"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/edit_email"
			android:padding="@dimen/margin_large"
			android:text="@string/enter_password"
			android:textSize="?attr/textTitleSize"
			android:textColor="?attr/textTitleColor"/>

		<EditText
			android:id="@+id/edit_password"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/title_password"
			android:padding="@dimen/margin_large"
			android:ems="10"
			android:inputType="textPassword"
			android:hint="@string/enter_password"
			/>

		<Button
			android:id="@+id/btn_sign_in"
			style="@style/BriarButton.Default"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/edit_password"
			android:layout_marginTop="@dimen/margin_medium"
			android:text="@string/sign_in_button"/>

		<Button
			android:id="@+id/btn_create_account"
			style="@style/BriarButton.Default"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/btn_sign_in"
			android:layout_marginTop="@dimen/margin_medium"
			android:text="Create a New Account Instead"/>
	</RelativeLayout>
</android.support.constraint.ConstraintLayout>